# moniarm

./: README.md
Doc/: blob_chase.txt  darknet_ros_run.txt  demo.txt
arduino/: esp32sNodemcu.rules
arduino/arduino_libraries/: README.md  build_mirco_ros_library.sh
arduino/esp32HumanOp/: esp32HumanOp.ino
arduino/esp32MotorMove/: esp32MotorMove.ino
arduino/humanGuide/: humanGuide.ino
arduino/micro_ros_moniarm_arm3dof_publisher/: micro_ros_moniarm_arm3dof_publisher.ino
arduino/micro_ros_moniarm_arm3dof_subscriber/: micro_ros_moniarm_arm3dof_subscriber.ino
arduino/micro_ros_publisher/: micro_ros_moniarm_arm3dfo_publisher.ino  micro_ros_publisher.ino
arduino/motorChecker/: motorChecker.ino
arduino/motorExtraRos32/: motorExtraRos32.ino  songlcdled.h  songlcdled.ino
arduino/motorScanner/: motorScanner.ino
moniarm/: CMakeLists.txt  package.xml
moniarm_bringup/: CMakeLists.txt  package.xml  setup.cfg  setup.py
moniarm_bringup/launch/: bringup.launch.py  pc.launch.py
moniarm_bringup/param/: mcu.yaml
moniarm_control/: CMakeLists.txt  package.xml  setup.cfg  setup.py
moniarm_control/launch/: blob_all.launch.py  blob_chase.launch.py  blob_getdata.launch.py  chase_ball.launch.py  chase_the_ball.launch.py  chase_yolo.launch.py  joy_all.launch.py  key_all.launch.py  lowlevel_ctl.launch.py  mimic_all.launch.py  motor.launch.py  motor_chase.launch.py  state_all.launch.py  take_picture.launch.py  traffic_all.launch.py  yolo_all.launch.py  yolo_chase.launch.py  yolo_getdata.launch.py  yolo_traffic.launch.py
moniarm_control/moniarm_control/: automove.csv  automove.txt  blob_chase.py  chase_ball.py  chase_moveit.py  chase_object_yolo.py  chase_the_ball.py  chase_traffic_yolo.py  chase_yolo.py  iknet.csv  lowlevel_control.py  mimic_teleop.py  motor_chase.py  motor_control.py
moniarm_control/moniarm_control/submodules/: iknet.py  myconfig.py  myconfig2.py  myutil.py  myutil1.py  myutil2.py
moniarm_control/param/: motor.298n2Wheel.yaml  motor.jetbot.yaml  motor.motorhatSteer.yaml  motor.nuriBldc.yaml  motor.pca9685Steer.yaml  motor.yaml
moniarm_cv/: CMakeLists.txt  package.xml  setup.cfg  setup.py
moniarm_cv/include/: blob_detector.py
moniarm_cv/launch/: blob_detect.launch.py  csicam.launch.py  usbcam.launch.py
moniarm_cv/moniarm_cv/: calibration.py  csi_pub.py  find_ball.py  usbcam_pub.py
moniarm_cv/moniarm_cv/submodules/: blob_detector.py
moniarm_cv/param/: cvparam.yaml
moniarm_description/: CMakeLists.txt  package.xml
moniarm_description/launch/: description_rviz.launch.py  moniarm_description.launch.py  state_publisher.launch.py
moniarm_description/meshes/: URDF_joint0.stl  URDF_joint1.stl  base.stl  link4.stl
moniarm_description/param/: zeros.yaml
moniarm_description/rviz/: moniarm.rviz
moniarm_description/urdf/: robot.urdf
moniarm_description/xacro/: moniarm.ros2_control.xacro  moniarm.urdf.xacro  moniarm_description.urdf.xacro
moniarm_hardware/: CMakeLists.txt  moniarm_hardware.xml  package.xml
moniarm_hardware/include/moniarm_hardware/: moniarm_system_position.hpp  visibility_control.h
moniarm_hardware/src/: moniarm_system_position.cpp
moniarm_interfaces/: CMakeLists.txt  package.xml
moniarm_interfaces/action/: Grab.action
moniarm_interfaces/msg/: Arm.msg  Arm3dof.msg  CmdChase.msg  CmdMotor.msg  Joint.msg
moniarm_interfaces/srv/: GetStatus.srv  Init.srv  PlayAni.srv  PlaySong.srv  SetLED.srv
moniarm_ml/: CMakeLists.txt  package.xml  setup.cfg  setup.py
moniarm_ml/launch/: blob_nn.launch.py  yolo_nn.launch.py
moniarm_ml/moniarm_ml/: blob_inference.py  iknet.pth  iknet.py  iknet_inference.py  iknet_test.py  iknet_testfn.py  iknet_training.py  iknet_x.pth  iknet_y.pth  kinematics_pose.csv  make_dataset.py  make_funx.py  submodules  yolo_inference.py
moniarm_ml/moniarm_ml/result/: log
moniarm_ml/param/: motor.yaml
moniarm_moveit2/: CMakeLists.txt  package.xml  setup.cfg  setup.py
moniarm_teleop/: package.xml  setup.cfg  setup.py
moniarm_teleop/launch/: teleop_joy.launch.py  teleop_keyboard.launch.py
moniarm_teleop/moniarm_teleop/script/: submodules  teleop_getdata.py  teleop_joy.py  teleop_keyboard.py
moniarm_teleop/param/: teleop_joy.param.yaml  teleop_joy.yaml  teleop_keyboard.yaml
processing/: hGuideCapture  hGuideCapture.pde
processing/java/: release
processing/java/jmods/: java.management.jmod  java.management.rmi.jmod  java.naming.jmod  java.net.http.jmod  java.se.jmod  java.security.sasl.jmod  java.smartcardio.jmod  java.sql.jmod  java.xml.crypto.jmod  jdk.accessibility.jmod  jdk.charsets.jmod  jdk.crypto.ec.jmod  jdk.dynalink.jmod  jdk.hotspot.agent.jmod  jdk.incubator.vector.jmod  jdk.internal.ed.jmod  jdk.internal.jvmstat.jmod  jdk.internal.le.jmod  jdk.internal.opt.jmod  jdk.internal.vm.compiler.jmod  jdk.javadoc.jmod  jdk.jcmd.jmod  jdk.jdeps.jmod  jdk.jdi.jmod  jdk.jfr.jmod  jdk.management.agent.jmod  jdk.naming.dns.jmod  jdk.net.jmod  jdk.nio.mapmode.jmod  jdk.sctp.jmod  jdk.security.auth.jmod  jdk.security.jgss.jmod  (+4 more)
processing/linux-aarch64/: hGuideCapture
processing/source/: hGuideCapture.java  hGuideCapture.pde
script/: camSelect.sh  setMotorOffset.sh  setMotorid.sh  setMotorid2.sh
(+100 files in other folders)
