<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>moniarm</name>
  <version>0.9.1</version>
  <description>
    ROS 2 packages for moniarm
  </description>
  <license>Apache 2.0</license>
  <url type="repository">https://github.com/bishopearson/moniarm2</url>
  <maintainer email="bishopearson@gmail.com">Bishop Pearson</maintainer>
  <author email="bishopearson@gmail.com">Bishop Pearson</author>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>moniarm_bringup</exec_depend>
  <exec_depend>moniarm_description</exec_depend>
  <exec_depend>moniarm_teleop</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
