<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>moniarm_moveit2</name>
  <version>1.0.0</version>
  <description>
    Basic nodes for starting the moniarm
  </description>
  <license>Apache 2.0</license>
  <maintainer email="zeta0707@gmail.com">ChangWhan Lee</maintainer>
  <author email="zeta0707@gmail.com">ChangWhan Lee</author>

  <exec_depend>rviz2</exec_depend>
  <exec_depend>moniarm_description</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
