<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>moniarm_teleop</name>
  <version>0.9.9</version>
  <description>
    Teleoperation node using keyboard for moniarm
  </description>
  <license>Apache 2.0</license>
  <maintainer email="zeta0707@gmail.com">ChangWhan Lee</maintainer>
  <author email="bishopearson@gmail.com">Bishop Pearson</author>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
